improve count operations for dynamo-db